--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # OpenAI API Key
 OPENAI_API_KEY=""
 
-# Flask Varibles
+# Flask Variables
 HOST="127.0.0.1"
 PORT="5001"
 DEBUG="False"
@@ -10,4 +10,4 @@ SECRET_KEY=""
 # Postgres Variables
 POSTGRES_USER="postgres"
 POSTGRES_PASSWORD=""
-POSTGRES_DB="hippolyte_summaries"
+POSTGRES_DB="cz_sol_1"
